[gd_scene load_steps=17 format=3 uid="uid://1y4do1lw4pau"]

[ext_resource type="Script" path="res://scenes/game_object/exam_paper/exam_paper.gd" id="1_7e4h8"]
[ext_resource type="Texture2D" uid="uid://dnlabyse8wt13" path="res://assets/icon.svg" id="1_yxu0u"]
[ext_resource type="PackedScene" uid="uid://bwqpi8jmxkdbd" path="res://scenes/component/velocity_component.tscn" id="2_atvnr"]
[ext_resource type="PackedScene" uid="uid://cibu2hpxo40hy" path="res://scenes/component/health_component.tscn" id="3_skayl"]
[ext_resource type="PackedScene" uid="uid://dm3lrtqb30uf5" path="res://scenes/component/experience_drop_component.tscn" id="4_tq75x"]
[ext_resource type="PackedScene" uid="uid://dip3jqu7xbldd" path="res://scenes/component/coin_drop_component.tscn" id="5_cepfb"]
[ext_resource type="PackedScene" uid="uid://bxl8idph5rpd7" path="res://scenes/component/hit_flash_component.tscn" id="6_ince0"]
[ext_resource type="Shader" path="res://scenes/component/hit_flash_component.gdshader" id="7_7q1li"]
[ext_resource type="PackedScene" uid="uid://diyl3hwyixy7d" path="res://scenes/component/damage_indicator_component.tscn" id="8_6nmo3"]
[ext_resource type="PackedScene" uid="uid://d0qwpry6qi150" path="res://scenes/component/pathfind_component.tscn" id="9_crriu"]
[ext_resource type="PackedScene" uid="uid://cs7ivlr47hqgi" path="res://scenes/component/hurtbox_component.tscn" id="10_7drak"]
[ext_resource type="PackedScene" uid="uid://bh7uyqbqidiur" path="res://scenes/component/hitbox_component.tscn" id="11_apspb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_47m40"]
resource_local_to_scene = true
shader = ExtResource("7_7q1li")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4kibs"]
radius = 19.0263

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_snqbj"]
bg_color = Color(0.227451, 0.227451, 0.313726, 1)
border_color = Color(0, 0, 0, 0)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hjcrh"]
bg_color = Color(0.607843, 0.760784, 0.27451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0)
corner_detail = 1
anti_aliasing = false

[node name="ExamPaper" type="CharacterBody2D" groups=["mobs"]]
collision_layer = 8
collision_mask = 25
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_7e4h8")

[node name="VelocityComponent" parent="." instance=ExtResource("2_atvnr")]

[node name="DashVelocityComponent" parent="." instance=ExtResource("2_atvnr")]
max_speed = 800.0
acceleration = 50.0

[node name="HealthComponent" parent="." instance=ExtResource("3_skayl")]
max_health = 10000.0

[node name="ExperienceDropComponent" parent="." instance=ExtResource("4_tq75x")]
experience = 2

[node name="CoinDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_cepfb")]
health_component = NodePath("../HealthComponent")
money = 5

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("6_ince0")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_47m40")

[node name="DamageIndicatorComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("8_6nmo3")]
health_component = NodePath("../HealthComponent")

[node name="PathfindComponent" parent="." node_paths=PackedStringArray("velocity_component") instance=ExtResource("9_crriu")]
velocity_component = NodePath("../VelocityComponent")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component", "velocity_component") instance=ExtResource("10_7drak")]
collision_layer = 0
collision_mask = 4
health_component = NodePath("../HealthComponent")
velocity_component = NodePath("../VelocityComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_4kibs")

[node name="HitboxComponent" parent="." instance=ExtResource("11_apspb")]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_4kibs")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
z_index = 2
custom_minimum_size = Vector2(36, 8)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -27.0
offset_right = 18.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_snqbj")
theme_override_styles/fill = SubResource("StyleBoxFlat_hjcrh")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4kibs")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_yxu0u")
